backups/production-2026-09-17/metadata/objects/Reservation__c.object
<CustomObject>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Account Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>**</fullName>
                </value>
                <value>
                    <fullName>***</fullName>
                </value>
                <value>
                    <fullName>****</fullName>
                </value>
                <value>
                    <fullName>*****</fullName>
                </value>
                <value>
                    <fullName>******</fullName>
                </value>
                <value>
                    <fullName>*******</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Price</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuantityCalculation__c</fullName>
        <label>Quantity Calculation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>QuantityCalculation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ReservationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>DELType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flight</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>DMC</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>General Services</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
</CustomObject>